--- a/VLaboralWeb/App/Empresas/Partials/empresaPerfilModificable.html
+++ b/VLaboralWeb/App/Empresas/Partials/empresaPerfilModificable.html
@@ -1,18 +1,17 @@
-﻿<div layout="column"flex="40">
-
-</div>
-<div layout="column" flex="60" layout-align="rigth">
+﻿<div layout="column" style="float:left" flex="60" layout-align="rigth">
     <md-card>
 
         <md-card-content>
-            <md-card-title layout="row">
-                <input type="file">
-
-                    <img src="../../../img/inti logo.png" />
-                
-            </md-card-title>
+            
             <section layout="row">
-
+                <div layout="column" style="display:block">
+                    <a style="text-decoration: none; color: black">
+                        <div style="height: 75px;float: left;width: 100%;">
+                            <span class="fa fa-user"></span>
+                        </div>
+                    </a>
+                    <input type="file"/>
+                </div>
                 <md-media-title>
                     <img ng-model="" ng-click="" class="mdi-image-camera" />
                 </md-media-title>
