--- a/VLaboralWeb/css/styles.css
+++ b/VLaboralWeb/css/styles.css
@@ -35,11 +35,11 @@
 .home .h_container { display: flex; flex-flow: wrap column; justify-content: center; align-items: center; margin-top: 5em; }
 .home .h_container h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 3.6em; color: #f0f0f0; text-align: center; margin-bottom: 0.5em; border: solid; padding: 20px; }
 .home .h_container h1 span { color: #51caf5; font-weight: 700; }
-.home .e_content { display: flex; width: 100%; justify-content: center; align-items: center; flex-wrap: wrap; flex-direction: row; transition: all 1.1s ease; }
-.home .e_content article { padding: 3em 0 0 0; width: 22%; display: flex; justify-content: center; align-items: center; flex-wrap: wrap; flex-direction: column; }
+.home .e_content { display: flex; width: 100%; justify-content: center; align-items: center; flex-wrap: wrap; flex-direction: row; transition: all 1.1s ease; margin-bottom: 1em }
+.home .e_content article { padding: 1em 0 3em 0; width: 22%; display: flex; justify-content: center; align-items: center;flex-direction: column; }
 .home .e_content article .icono { font-size: 4em; color: #d2d2d2; border-radius: 100%; padding-top: 0.35em; transition: all 0.3s ease; }
 .home .e_content article .icono:hover { color: #51caf5; border-color: #69cbc8; cursor: pointer; }
-.home .e_content article h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.2em; color: #f0f0f0; margin-top: 1.3em; }
+.home .e_content article h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.2em; color: #f0f0f0; margin-top: 1.3em; text-align:center;}
 .home .e_content article h1 span { font-weight: 700; }
 .home .e_content article hr { width: 35%; border: 1px solid #77da55; margin: 1.5em 0; }
 .home .e_content article p { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.1em; color: #d2d2d2; text-align: center; line-height: 1.5em; width: 75%; }
@@ -54,25 +54,25 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;*/ }
-.elegir .e_prof { width: 50%; padding: 8.5em 3em; background: rgb(217, 177, 33); }
+.elegir .e_prof { width: 50%; padding: 6em 3em; background: rgb(217, 177, 33); }
 .elegir .e_prof h1 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 2.1em; color: #1e1e23; text-transform: uppercase; }
 .elegir .e_prof h1 span { font-weight: 700; }
 .elegir .e_prof h3 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1.4em; color: #323232; margin: 2em 0; }
 .elegir .e_prof a { font-family: 'Lato', sans-serif; font-weight: 700; font-size: 0.9em; color: #f0f0f0; text-decoration: none; border-radius: 5px; padding: 0.8em 2.5em; background: #51caf5; transition: all 0.3s ease; }
 .elegir .e_prof a:hover { background: #3498db; color: #f0f0f0; }
-.elegir .e_empr { width: 50%; background: rgb(12, 150, 77); padding: 8.5em 3em; }
+.elegir .e_empr { width: 50%; background: rgb(12, 150, 77); padding: 6em 3em; }
 .elegir .e_empr h1 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 2.1em; color: white; text-transform: uppercase; }
 .elegir .e_empr h1 span { font-weight: 700; }
 .elegir .e_empr h3 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1.4em; color: #d2d2d2; margin: 2em 0; }
 .elegir .e_empr a { font-family: 'Lato', sans-serif; font-weight: 700; font-size: 0.9em; color: white; text-decoration: none; border-radius: 5px; padding: 0.8em 2.5em; background: #77da55; transition: all 0.3s ease; }
 .elegir .e_empr a:hover { background: #2ecc71; }
 
-.t_list { display: block; padding: 6em 0; background: #f0f0f0); }
+.t_list { display: block; padding: 2em 0; background: #f0f0f0); }
 .t_list h1 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 3.45em; color: #323232; text-align: center; text-transform: uppercase; }
 
-.ofertas .lista { display: inline-block; float: right; width: 80%; }
-.ofertas .lista article { display: flex; flex-flow: wrap row; padding: 1em 10%; justify-content: space-between; align-items: center; transition: all 0.2s ease; background: #f0f0f0; }
-.ofertas .lista article:hover { background: gainsboro; }
+.ofertas .lista { display: inline-block; float: right; width: 100%; }
+.ofertas .lista article { display: flex; flex-flow: wrap row; padding: 10%; justify-content: space-between; align-items: center; background: white; }
+/*.ofertas .lista article:hover { background: #f0f0f0; }*/
 .ofertas .lista article .logo_ofer { display: flex; flex-flow: wrap column; align-items: center; justify-content: center; }
 .ofertas .lista article .logo_ofer img { width: 8em; }
 .ofertas .lista article .logo_ofer h2 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1.5em; color: #1e1e23; text-transform: uppercase; }
@@ -80,18 +80,36 @@
 .ofertas .lista article .info_ofer h1 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1.6em; color: #5a5a5f; text-align: left; }
 .ofertas .lista article .info_ofer hr { border: 1px solid #51caf5; border-bottom: none; margin: 0.5em 0 0.8em; width: 100%; }
 .ofertas .lista article .info_ofer h3 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.2em; color: #1e1e23; text-align: left; }
-.ofertas .lista article .info_ofer a { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1.1em; color: #f0f0f0; text-decoration: none; background: #3e8abb; border-radius: 5px; width: 5em; text-align: center; width: 7em; padding: 0.45em 1em; margin-top: 1.5em; transition: all 0.2s ease; }
-.ofertas .lista article .info_ofer a:hover { color: white; background: #3498db; }
+.ofertas .lista article .info_ofer a { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1.1em; color: #f0f0f0; text-decoration: none; background: #0c964d; border-radius: 5px; width: 5em; text-align: center; width: 7em; padding: 0.45em 1em; margin-top: 1.5em; transition: all 0.2s ease; }
+.ofertas .lista article .info_ofer a:hover { color: white; background: #d9b121; }
 .ofertas .lista article .info_ofer .d_ofer { display: flex; flex-flow: wrap row; justify-content: space-between; align-items: center; margin-bottom: 1em; }
 .ofertas .lista article .info_ofer .d_ofer h4 { text-transform: uppercase; font-family: 'Lato', sans-serif; font-weight: 400; font-size: 0.8em; color: #5a5a5f; }
 .ofertas .lista article .info_ofer .d_ofer h5 { font-family: 'Lato', sans-serif; font-weight: 700; font-size: 1em; color: #323232; background: rgba(180, 180, 180, 0.5); padding: 0.2em; border-left: 4px solid #51caf5; }
-.ofertas .sidebar { display: inline-block; float: left; width: 20%; }
-.ofertas .sidebar h3 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.3em; color: #f0f0f0; background: linear-gradient(#3c3c3c, #414141); border-left: 5px solid #3e8abb; padding: 0.4em 1em; text-transform: uppercase; }
+.ofertas .sidebar { display: inline-block; float: left; width: 100%; }
+.ofertas .sidebar h3 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1em; color: #f0f0f0; background: linear-gradient(#3c3c3c, #414141); border-left: 5px solid #d9b121; padding: 0.4em 1em; text-transform: uppercase; }
 .ofertas .sidebar ul { list-style: none; }
-.ofertas .sidebar ul li { display: block; padding: 0.5em 0; border: 1px solid rgba(100, 100, 100, 0.15); border-top: none; }
-.ofertas .sidebar ul li:hover { background: rgba(100, 100, 100, 0.15); }
-.ofertas .sidebar ul li a { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 0.9em; color: #5a5a5f; text-decoration: none; margin-left: 2em; }
+.ofertas .sidebar ul li { display: block; padding: 12px; border: 1px solid rgba(100, 100, 100, 0.15); border-top: none; }
+/*.ofertas .sidebar ul li:hover { background: rgba(100, 100, 100, 0.15); }*/
+.ofertas .sidebar ul li a { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 0.9em; color: #0c964d; text-decoration: none; margin-left: 2em; }
 .ofertas .sidebar ul li a:hover { color: #1e1e23; }
+.ofertas .sidebar .enviar {font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 1em;
+    color: #f0f0f0;
+    text-decoration: none;
+    background: #0c964d;
+    border-radius: 2px;
+    text-align: center;
+    padding: 0.6em;
+    /* margin: 1em; */
+    transition: all 0.2s ease;
+    border: none;
+    cursor: pointer;}
+
+    .ofertas .sidebar .enviar:hover {
+         color: white; background: #d9b121;
+    }
+
 
 .login_inicio { background: url(../img/11.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed; height: 100vh; display: flex; flex-flow: wrap column; justify-content: center; align-items: center; }
 .login_inicio form { width: 40%; background: linear-gradient(#cdcdcd, #f0f0f0); padding: 4em 1.5em; border-radius: 2px; display: flex; flex-flow: wrap column; justify-content: center; align-items: center; }
@@ -99,8 +117,8 @@
 .login_inicio form .t_form { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1em; color: #323232; width: 80%; border: none; border-bottom: 1px solid #1e1e23; background: none; padding: 1em 0 0.35em 0.5em; margin-bottom: 1em; }
 .login_inicio form .t_form:focus { outline: none; border-bottom-color: #3498db; }
 .login_inicio form .t_form:hover { border-bottom-color: #3e8abb; }
-.login_inicio form .enviar { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1em; color: #f0f0f0; text-decoration: none; background: #0c964d; border-radius: 2px; text-align: center; padding: 0.6em 10em; margin-top: 1.5em; transition: all 0.2s ease; border: none; cursor: pointer; }
-.login_inicio form .enviar:hover { color: white; background: #3498db; }
+.login_inicio form .enviar { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1em; color: #f0f0f0; text-decoration: none; background: #0c964d; border-radius: 2px; text-align: center; padding: 0.6em 10em; margin: 1.5em; transition: all 0.2s ease; border: none; cursor: pointer; }
+.login_inicio form .enviar:hover { color: white; background: #d9b121; }
 
 .bg_re { background: url(../img/11.jpg); }
 
@@ -109,7 +127,7 @@
 .bg_log { background: url(../img/15.jpeg); }
 
 .login_inicio { background-repeat: no-repeat; background-size: cover; background-attachment: fixed; height: 100vh; display: flex; flex-flow: wrap column; justify-content: center; align-items: center; }
-.login_inicio form { width: 40%; background: linear-gradient(#ebebeb, #f0f0f0); padding: 4em 1.5em; border-radius: 2px; display: flex; flex-flow: wrap column; justify-content: center; align-items: center; }
+.login_inicio form { width: 40%; background: linear-gradient(#ebebeb, #f0f0f0); padding: 0em 1.5em; border-radius: 2px; display: flex; flex-flow: wrap column; justify-content: center; align-items: center; }
 .login_inicio form h1 { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 2.6em; color: #1e1e23; margin-bottom: 0.8em; }
 .login_inicio form .lbl { color: #5a5a5f; }
 .login_inicio form .lbl:hover { color: #323232; }
@@ -118,8 +136,8 @@
 .login_inicio form .inp:hover { border-color: #3e8abb; }
 .login_inicio form .inp:focus { border-color: #51caf5; }
 .login_inicio form .ic { width: 70%; }
-.login_inicio form .enviar { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1em; color: #f0f0f0; text-decoration: none; background: #0c964d; border-radius: 2px; text-align: center; padding: 0.6em 10em; margin-top: 1.5em; transition: all 0.2s ease; border: none; cursor: pointer; }
-.login_inicio form .enviar:hover { color: white; background: #d9b121; }
+.login_inicio form .enviar { font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1em; color: #f0f0f0; text-decoration: none; background: #0c964d; border-radius: 2px; text-align: center; padding: 0.6em 10em; margin: 1.5em; transition: all 0.2s ease; border: none; cursor: pointer; }
+.login_inicio form .enviar :hover { color: white; background: #d9b121; }
 
 nav { display: flex; flex-flow: wrap row; justify-content: space-between; align-items: center; background: whitesmoke; width: 100%; padding: 0.3em; box-shadow: 2px 1px 5px rgba(45, 45, 45, 0.5); position: inherit; z-index: 1; }
 nav a { font-family: 'Lato', sans-serif; font-weight: 700; font-size: 2em; color: #0c964d; text-decoration: none; color: #b4b4b4 !important; }
@@ -183,31 +201,37 @@ main h2 { font-family: 'Montserrat', sans-serif; font-weight: 300; font-size: 1.
 
 .wfc { width: 80%; }
 
-.ofertas_p { background: whitesmoke; border-radius: 5px; padding: 1.5em; }
-.ofertas_p .emp_d img { width: 20%; border-radius: 100%; }
-.ofertas_p .emp_d .emp_desc_ofer h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2.8em; color: #1e1e23; line-height: 2.5em; text-transform: uppercase; }
-.ofertas_p .emp_d .emp_desc_ofer h4 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.1em; color: #767a8d; }
+.ofertas_p { background: whitesmoke; padding: 0.5em; }
+.ofertas_p .emp_d img { width: 10%; border-radius: 100%; }
+.ofertas_p .emp_d .emp_desc_ofer h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2.4em; color: #1e1e23; line-height: 2em; text-transform: uppercase; }
+.ofertas_p .emp_d .emp_desc_ofer h4 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1em; color: #767a8d; }
 .ofertas_p .h_op { border: 1px solid #51caf5; border-top: none; margin: 2em 0; }
 
-.t_ofer_p h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2.7em; color: #1e1e23; }
-.t_ofer_p h3 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.1em; color: #737373; margin: 4em 0; }
+.t_ofer_p h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2.5em; color: #1e1e23; }
+.t_ofer_p h3 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.1em; color: #737373; margin: 3em 0; }
 .t_ofer_p .fechas { width: 100%; }
 .t_ofer_p .fechas h2 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.2em; color: #1e1e23; }
 
-.h_sop { border: 1px solid #c8c8c8; border-top: none; margin: 4em 0; }
+.h_sop { border: 1px solid #c8c8c8; border-top: none; margin: 2em 0; }
 
 .ofer_obj h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 3em; color: #1e1e23; margin-bottom: 0.7em; }
 .ofer_obj h4 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.2em; color: #737373; }
 
-.puestos h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 3em; color: #1e1e23; margin-bottom: 0.7em; }
+.puestos h1 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.6em; color: #1e1e23; margin-bottom: 0.7em; }
 
-.puestos_box { background: white; padding: 2em 1em; border: 1px solid #e6e6e6; margin-top: 2em; }
-.puestos_box h2 { font-family: 'Lato', sans-serif; font-weight: 700; font-size: 1.8em; color: #1e1e23; margin-bottom: 0.7em; }
-.puestos_box h3 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.2em; color: #1e1e23; margin-bottom: 2em; text-align: center; }
+.puestos_box {     background: white;
+    padding: 1em;
+    border: 1px solid #E6E6FC;
+    margin-top: 2em;
+}
+.puestos_box h2 { font-family: 'Lato', sans-serif; font-weight: 700; font-size: 1em; color: #1e1e23; margin-bottom: 0.7em; }
+.puestos_box h3 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 0.8em; color: #1e1e23; margin-bottom: 2em; text-align: center; }
 .puestos_box .p_items { width: 100%; }
-.puestos_box .p_items h4 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.1em; color: #1e1e23; margin-bottom: 0.7em; }
-.puestos_box .p_items h4 span { font-weight: 700; font-size: 0.95em; color: #3c3c3c; }
-.puestos_box .p_items .va { background-color: #3e8abb; color: #f0f0f0; padding: 0.2em 0.4em 0.3em; border-radius: 10px; }
+.puestos_box .p_items h4 { font-family: 'Lato', sans-serif; font-weight: 300; font-size: 1.1em; color: #1e1e23; margin-bottom: 0.2em; }
+.puestos_box .p_items h4 span { font-weight: 700;
+    font-size: 0.73em;
+    color: #3c3c3c; }
+.puestos_box .p_items .va { background-color: #0c964d; color: #f0f0f0; padding: 0.2em 0.4em 0.3em; border-radius: 10px; }
 .puestos_box .p_items .etiquetas { background: #e1e1e1; border-radius: 16px; padding: 3px 10px; font-weight: 400; }
 
 .empresas_auspicio {background:white; padding: 1em 1em; }
@@ -241,4 +265,72 @@ main h2 { font-family: 'Montserrat', sans-serif; font-weight: 300; font-size: 1.
     
 }
 .botones:hover { color: white; background: #d9b121; }
+
+.botonesOrdenBy {
+    border: 1px solid #ccc;
+    background: #fff;
+    min-height: 40px;
+    margin-bottom: 20px;
+    border-radius: 3px;
+    float: left;
+    width: 100%;
+}
+.botonesOrdenBy p {
+    color: #0c964d;
+    float: left;
+    padding: 10px 15px 0;
+    font-size: 15px;
+    margin: 0;
+}
+    .botonesOrdenBy ul {
+    list-style: none;
+    }
+.botonesOrdenBy li {
+    float:left; 
+    padding-top: 9px;   
+    }
+.botonesOrdenBy li a {
+    padding: 8px 10px 0;
+    cursor:pointer;
+}
+
+.botonesOrdenBy li :hover {
+        color: #d9b121;
+}
+
+.botonesOrdenByProfesional {
+    border: 1px solid #ccc;
+    background: #fff;
+    min-height: 40px;
+    margin-bottom: 20px;
+    border-radius: 3px;
+    float: left;
+    width: 100%;
+}
+.botonesOrdenByProfesional p {
+    color: #0c964d;
+    float: left;
+    padding: 10px 15px 0;
+    font-size: 15px;
+    margin: 0;
+}
+
+.botonesOrdenByProfesional ul {
+    list-style: none;
+    }
+
+.botonesOrdenByProfesional li {
+    float:left; 
+    padding-top: 9px;   
+}
+
+.botonesOrdenByProfesional li a{
+    padding: 8px 10px 0;
+    cursor:pointer;
+}
+.botonesOrdenByProfesional a :hover {
+        color: #d9b121;
+}
+
+
 /*# sourceMappingURL=styles.css.map */
